# chexchain

./: .gitignore  .qmlls.ini  CMakeLists.txt  CMakePresets.json  Main.qml  README.md  main.cpp  todo.txt
.zed/: debug.json
src/: main.cpp
src/Block/: block.cpp  block.h
src/Blockchain/: blockchain.cpp  blockchain.h  miner.h  minermodel.cpp  minermodel.h
src/BlockchainApp/: blockchainapp.cpp  blockchainapp.h
src/HashTools/: hashtools.cpp  hashtools.h
src/Transaction/: transaction.cpp  transaction.h
src/Utility/: utility.h
src/Wallet/: wallet.cpp  wallet.h
src/signer/: signer.cpp  signer.h  wallet.h
tests/: CMakeLists.txt  block_test.cpp  merkle_test.cpp
ui/: Main.qml
